# pumpwood-communication

./: CITATION.cff  FetchDatabase.java  LICENSE  README.md  ReadMe.md  VERSION  build.sh  changelog.md  changelogs.md  dev_requirements.txt  pyproject.toml  pyproject_template.toml  requirements.txt  setup.py  setup_template.py
.github/workflows/: ci.yml
__git_aux/: sync_main.bash
docs/: index.html  pumpwood_communication.html  search.js
docs/pumpwood_communication/: airflow.html  airflow.md  aux.html  cache.html  config.html  encrypt.html  exceptions.html  exceptions.md  hash.html  hash.md  index.md  microservice_abc.html  microservices.html  microservices.md  misc.html  misc.md  serializers.html  serializers.md  type.html
docs/pumpwood_communication/microservice_abc/: base.html  parallel.html  simple.html  system.html
docs/pumpwood_communication/microservice_abc/parallel/: retrieve.html
site/pumpwood_communication/: airflow.html  exceptions.html  index.html  microservices.html  misc.html
src/pumpwood_communication/: __init__.py  airflow.py  aux.py  config.py  exceptions.py  hash.py  microservices.py  misc.py  serializers.py
src/pumpwood_communication.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/pumpwood_communication/cache/: cache.py
src/pumpwood_communication/encript/: __init__.py  encript.py
src/pumpwood_communication/encrypt/: encrypt.py
src/pumpwood_communication/microservice_abc/base/: __init__.py  base.py
src/pumpwood_communication/microservice_abc/parallel/: action.py  base.py  batch.py  delete.py  list.py  retrieve.py  save.py
src/pumpwood_communication/microservice_abc/simple/: __init__.py  batch.py  delete.py  info.py  list.py  permission.py  retrieve.py  save.py
src/pumpwood_communication/microservice_abc/simple/batch/: main.py
src/pumpwood_communication/microservice_abc/simple/batch/aux/: __init__.py  flat_list_by_chunks.py
src/pumpwood_communication/microservice_abc/system/: permission.py
src/pumpwood_communication/type/: __init__.py  abc.py  action.py  info.py  views.py
